syntax = "proto3";
package exomonad.effects.git;

// Git effects for repository operations.
// All effects operate on a working directory.

// ============================================================================
// GetBranch - Get current git branch
// ============================================================================

message GetBranchRequest {
  // Working directory (defaults to current if empty).
  string working_dir = 1;
}

message GetBranchResponse {
  // Current branch name (e.g., "main", "feature/foo").
  string branch = 1;
  // True if HEAD is detached (not on a branch).
  bool detached = 2;
}

// ============================================================================
// GetStatus - Get repository status (dirty files)
// ============================================================================

message GetStatusRequest {
  // Working directory.
  string working_dir = 1;
}

message GetStatusResponse {
  // Files with uncommitted changes.
  repeated string dirty_files = 1;
  // Files staged for commit.
  repeated string staged_files = 2;
  // Untracked files.
  repeated string untracked_files = 3;
}

// ============================================================================
// GetCommits - Get recent commits
// ============================================================================

message GetCommitsRequest {
  // Working directory.
  string working_dir = 1;
  // Number of commits to retrieve (default: 10).
  int32 limit = 2;
  // Optional branch/ref to get commits from.
  string ref = 3;
}

message Commit {
  // Full SHA hash.
  string sha = 1;
  // Short SHA (7 chars).
  string short_sha = 2;
  // Commit message (first line).
  string message = 3;
  // Author name.
  string author = 4;
  // Author email.
  string author_email = 5;
  // Commit timestamp (Unix seconds).
  int64 timestamp = 6;
}

message GetCommitsResponse {
  repeated Commit commits = 1;
}

// ============================================================================
// HasUnpushedCommits - Check for commits not on remote
// ============================================================================

message HasUnpushedCommitsRequest {
  // Working directory.
  string working_dir = 1;
  // Remote name (default: "origin").
  string remote = 2;
}

message HasUnpushedCommitsResponse {
  // True if there are unpushed commits.
  bool has_unpushed = 1;
  // Number of unpushed commits.
  int32 count = 2;
}

// ============================================================================
// GetRemoteUrl - Get remote URL
// ============================================================================

message GetRemoteUrlRequest {
  // Working directory.
  string working_dir = 1;
  // Remote name (default: "origin").
  string remote = 2;
}

message GetRemoteUrlResponse {
  // Remote URL (e.g., "git@github.com:owner/repo.git").
  string url = 1;
}

// ============================================================================
// GetRepoInfo - Get repository info (branch + owner/name)
// ============================================================================

message GetRepoInfoRequest {
  // Working directory.
  string working_dir = 1;
}

message GetRepoInfoResponse {
  // Current branch name.
  string branch = 1;
  // Repository owner (from remote URL).
  string owner = 2;
  // Repository name (from remote URL).
  string name = 3;
}

// ============================================================================
// GetWorktree - Get worktree info
// ============================================================================

message GetWorktreeRequest {
  // Working directory.
  string working_dir = 1;
}

message GetWorktreeResponse {
  // Absolute path to worktree root.
  string path = 1;
  // Branch name.
  string branch = 2;
  // HEAD commit SHA.
  string head_commit = 3;
  // True if this is a linked worktree (not main).
  bool is_linked = 4;
}

// ============================================================================
// Service definition (for schema generation, not gRPC)
// ============================================================================

service GitEffects {
  rpc GetBranch(GetBranchRequest) returns (GetBranchResponse);
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
  rpc GetCommits(GetCommitsRequest) returns (GetCommitsResponse);
  rpc HasUnpushedCommits(HasUnpushedCommitsRequest) returns (HasUnpushedCommitsResponse);
  rpc GetRemoteUrl(GetRemoteUrlRequest) returns (GetRemoteUrlResponse);
  rpc GetRepoInfo(GetRepoInfoRequest) returns (GetRepoInfoResponse);
  rpc GetWorktree(GetWorktreeRequest) returns (GetWorktreeResponse);
}
